Fixing Card alignment

--- a/src/components/PlanetCard/PlanetCard.scss
+++ b/src/components/PlanetCard/PlanetCard.scss
@@ -5,6 +5,7 @@
   color: #333333;
   margin: 0 auto;
   max-width: 320px;
+  text-align: left;
   padding: 10px;
   width: 95%;
 
